--- a/cabal.project
+++ b/cabal.project
@@ -9,6 +9,7 @@ packages:
   -- TODO fix when reflex-dom is on 9.2.2
   -- composite-reflex/
   composite-swagger/
+  example/
 
 source-repository-package
   type: git
