--- a/composite-opaleye/package.yaml
+++ b/composite-opaleye/package.yaml
@@ -18,6 +18,7 @@ dependencies:
   - postgresql-simple >= 0.5.3.0 && < 0.7
   - product-profunctors >= 0.8.0.3 && < 0.12
   - profunctors >= 5.2.1 && < 5.7
+  - split >= 0.2.3 && < 0.3
   - template-haskell >= 2.11.1.0 && < 2.19
   - text >= 1.2.2.2 && < 1.3
   - vinyl >= 0.5.3 && < 0.15
